Система фильтрации Клиентов

--- a/Task12/View/MainWindow.xaml
+++ b/Task12/View/MainWindow.xaml
@@ -11,16 +11,45 @@
             <ColumnDefinition Width="1*"/>
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
-        <DataGrid
-            ItemsSource="{Binding Clients}"
-            AutoGenerateColumns="True">
-        </DataGrid>
+        <StackPanel>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="1*"/>
+                </Grid.ColumnDefinitions>
+                <CheckBox
+                    Content="Частные лица"
+                    Margin="5"
+                    IsChecked="{Binding Path=PrivatePersonsEnabled}">
+                </CheckBox>
+                <CheckBox
+                    Grid.Column="1"
+                    Margin="5"
+                    Content="Компании"
+                    IsChecked="{Binding Path=CompaniesEnabled}">
+                </CheckBox>
+                <TextBox
+                    Grid.Column="2"
+                    Text="{Binding TextFilterString, UpdateSourceTrigger=PropertyChanged}"
+                    Margin="5">
+                </TextBox>
+            </Grid>
+            <DataGrid
+                ItemsSource="{Binding FilteredClients}"
+                AutoGenerateColumns="True"
+                ScrollViewer.VerticalScrollBarVisibility="Auto"
+                Margin="5">
+            </DataGrid>
+        </StackPanel>
 
         <DataGrid
             Grid.Column="1"
             ItemsSource="{Binding Accounts}"
             AutoGenerateColumns="True"
+            Margin="5"
         />
+        
 
     </Grid>
 </Window>
