--- a/Task12/View/MainWindow.xaml
+++ b/Task12/View/MainWindow.xaml
@@ -5,13 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Task12" xmlns:viewmodel="clr-namespace:Task12.ViewModel" d:DataContext="{d:DesignInstance Type=viewmodel:MainVM}"
         mc:Ignorable="d"
-        Title="Астра Банк" Height="600" Width="700">
+        Title="Астра Банк" Height="580" Width="800">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="3*"/>
-            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="55*"/>
+            <ColumnDefinition Width="45*"/>
         </Grid.ColumnDefinitions>
         <StackPanel>
+            <TextBlock FontSize="14" FontWeight="Bold" Margin="5">Клиенты</TextBlock>
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="1*"/>
@@ -42,15 +43,56 @@
                 ScrollViewer.VerticalScrollBarVisibility="Auto"
                 Margin="5">
             </DataGrid>
-            <Button Content="Добавить клиента"/>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="1*"/>
+                </Grid.ColumnDefinitions>
+                <Button
+                    Content="Добавить"
+                    Margin="5">
+                </Button>
+                <Button
+                    Grid.Column="1"
+                    Content="Редактировать"
+                    Margin="5">
+                </Button>
+            </Grid>
+            <Button
+                    Content="Перевод от клиента клиенту"
+                    Margin="5">
+            </Button>
+        </StackPanel>
+        <StackPanel Grid.Column="1">
+            <TextBlock FontSize="14" FontWeight="Bold" Margin="5">Счета клиента</TextBlock>
+            <DataGrid
+                ItemsSource="{Binding Accounts}"
+                SelectedItem="{Binding SelectedAccount}"
+                AutoGenerateColumns="True" 
+                Margin="5">
+            </DataGrid>
+            <Button
+                    Content="Перевод со счета на счет"
+                    Margin="5">
+            </Button>
+            <Button
+                    Content="Пополнить счет"
+                    Margin="5">
+            </Button>
+            <Button
+                    Content="Добавить счет"
+                    Margin="5">
+            </Button>
+            <Button
+                    Content="Изменить счет"
+                    Margin="5">
+            </Button>
+
+            <Button
+                    Content="Удалить счет"
+                    Margin="5">
+            </Button>
         </StackPanel>
 
-        <DataGrid
-            Grid.Column="1"
-            ItemsSource="{Binding Accounts}"
-            SelectedItem="{Binding SelectedAccount}"
-            AutoGenerateColumns="True"
-            Margin="5"
-        />
     </Grid>
 </Window>
