--- a/Task12/View/MainWindow.xaml
+++ b/Task12/View/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Task12" xmlns:viewmodel="clr-namespace:Task12.ViewModel" d:DataContext="{d:DesignInstance Type=viewmodel:MainVM}"
         mc:Ignorable="d"
-        Title="Астра Банк" Height="580" Width="850">
+        Title="Астра Банк" Height="600" Width="850">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="50*"/>
@@ -50,11 +50,13 @@
                 </Grid.ColumnDefinitions>
                 <Button
                     Content="Добавить"
+                    IsEnabled="False"
                     Margin="5">
                 </Button>
                 <Button
                     Grid.Column="1"
                     Content="Редактировать"
+                    IsEnabled="False"
                     Margin="5">
                 </Button>
             </Grid>
