--- a/Task12/View/MainWindow.xaml
+++ b/Task12/View/MainWindow.xaml
@@ -5,103 +5,52 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Task12" xmlns:viewmodel="clr-namespace:Task12.ViewModel" d:DataContext="{d:DesignInstance Type=viewmodel:MainVM}"
         mc:Ignorable="d"
-        Title="Астра Банк" Height="600" Width="850">
-    <Grid>
+        Title="Астра Банк" Height="700" Width="950">
+    <Window.Resources>
+        <Style x:Key="ButtonStyle" TargetType="Button">
+            <Setter Property="Margin" Value="10"/>
+            <Setter Property="Padding" Value="5"/>
+            <Setter Property="Background" Value="#FF4CAF50"/>
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="BorderThickness" Value="0"/>
+            <Setter Property="FontWeight" Value="Bold"/>
+        </Style>
+    </Window.Resources>
+    <Grid Margin="10">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="50*"/>
-            <ColumnDefinition Width="50*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <StackPanel>
-            <TextBlock FontSize="14" FontWeight="Bold" Margin="5">Клиенты</TextBlock>
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="1*"/>
-                    <ColumnDefinition Width="1*"/>
-                    <ColumnDefinition Width="1*"/>
-                </Grid.ColumnDefinitions>
-                <CheckBox
-                    Content="Частные лица"
-                    Margin="5"
-                    IsChecked="{Binding Path=PrivatePersonsEnabled}">
-                </CheckBox>
-                <CheckBox
-                    Grid.Column="1"
-                    Margin="5"
-                    Content="Компании"
-                    IsChecked="{Binding Path=CompaniesEnabled}">
-                </CheckBox>
-                <TextBox
-                    Grid.Column="2"
-                    Text="{Binding TextFilterString, UpdateSourceTrigger=PropertyChanged}"
-                    Margin="5">
-                </TextBox>
-            </Grid>
-            <DataGrid
-                ItemsSource="{Binding FilteredClients}"
-                SelectedItem="{Binding SelectedClient}"
-                AutoGenerateColumns="True"
-                ScrollViewer.VerticalScrollBarVisibility="Auto"
-                Margin="5">
-            </DataGrid>
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="1*"/>
-                    <ColumnDefinition Width="1*"/>
-                </Grid.ColumnDefinitions>
-                <Button
-                    Content="Добавить"
-                    IsEnabled="False"
-                    Margin="5">
-                </Button>
-                <Button
-                    Grid.Column="1"
-                    Content="Редактировать"
-                    IsEnabled="False"
-                    Margin="5">
-                </Button>
-            </Grid>
-            <Button
-                    Content="Перевод от клиента клиенту"
-                    Command="{Binding MoneyTransferClientToClientCommand}"
-                    Margin="5">
-            </Button>
-        </StackPanel>
-        <StackPanel Grid.Column="1">
-            <TextBlock FontSize="14" FontWeight="Bold" Margin="5">Счета клиента</TextBlock>
-            <DataGrid
-                ItemsSource="{Binding Accounts}"
-                SelectedItem="{Binding SelectedAccount}"
-                AutoGenerateColumns="True" 
-                Margin="5">
-            </DataGrid>
-            <Button
-                    Content="Перевод со счета на счет"
-                    Command="{Binding MoneyTransferAccountToAccountCommand}"
-                    Margin="5">
-            </Button>
-            <Button
-                    Content="Пополнить счет"
-                    Command="{Binding TopUpAccountCommand}"
-                    Margin="5">
-            </Button>
-            <Button
-                    Content="Добавить счет"
-                    Command="{Binding AddAccountCommand}"
-                    Margin="5">
-            </Button>
-            <Button
-                    Content="Изменить счет"
-                    Command="{Binding EditAccountCommand}"
-                    Margin="5">
-            </Button>
 
-            <Button
-                    Content="Удалить счет"
-                    Margin="5"
-                    Command="{Binding CloseAccountCommand}"
-                    CommandParameter="{Binding SelectedAccount}">
-            </Button>
-        </StackPanel>
+        <Border Background="#FFF5F5F5" Margin="5" Padding="10" CornerRadius="5">
+            <StackPanel>
+                <TextBlock FontSize="16" FontWeight="Bold" Margin="5">Клиенты</TextBlock>
+                <StackPanel Orientation="Horizontal" Margin="5">
+                    <CheckBox Content="Частные лица" Margin="5" IsChecked="{Binding Path=PrivatePersonsEnabled}"/>
+                    <CheckBox Content="Компании" Margin="5" IsChecked="{Binding Path=CompaniesEnabled}"/>
+                    <TextBox Text="{Binding TextFilterString, UpdateSourceTrigger=PropertyChanged}" Margin="5" Width="200"/>
+                </StackPanel>
+                <DataGrid ItemsSource="{Binding FilteredClients}" SelectedItem="{Binding SelectedClient}" AutoGenerateColumns="True" ScrollViewer.VerticalScrollBarVisibility="Auto" Margin="5"/>
+                <StackPanel Orientation="Horizontal" Margin="5">
+                    <Button Content="Добавить" Style="{StaticResource ButtonStyle}" IsEnabled="False"/>
+                    <Button Content="Редактировать" Style="{StaticResource ButtonStyle}" IsEnabled="False"/>
+                </StackPanel>
+                <Button Content="Перевод от клиента клиенту" Command="{Binding MoneyTransferClientToClientCommand}" Style="{StaticResource ButtonStyle}"/>
+            </StackPanel>
+        </Border>
 
+        <Border Background="#FFF5F5F5" Grid.Column="1" Margin="5" Padding="10" CornerRadius="5">
+            <StackPanel>
+                <TextBlock FontSize="16" FontWeight="Bold" Margin="5">Счета клиента</TextBlock>
+                <DataGrid ItemsSource="{Binding Accounts}" SelectedItem="{Binding SelectedAccount}" AutoGenerateColumns="True" Margin="5"/>
+                <StackPanel Orientation="Vertical" Margin="5">
+                    <Button Content="Перевод со счета на счет" Command="{Binding MoneyTransferAccountToAccountCommand}" Style="{StaticResource ButtonStyle}"/>
+                    <Button Content="Пополнить счет" Command="{Binding TopUpAccountCommand}" Style="{StaticResource ButtonStyle}"/>
+                    <Button Content="Добавить счет" Command="{Binding AddAccountCommand}" Style="{StaticResource ButtonStyle}"/>
+                    <Button Content="Изменить счет" Command="{Binding EditAccountCommand}" Style="{StaticResource ButtonStyle}"/>
+                    <Button Content="Удалить счет" Command="{Binding CloseAccountCommand}" CommandParameter="{Binding SelectedAccount}" Style="{StaticResource ButtonStyle}"/>
+                </StackPanel>
+            </StackPanel>
+        </Border>
     </Grid>
 </Window>
