--- a/Task12/View/Accounts/CurrentAccountView.xaml
+++ b/Task12/View/Accounts/CurrentAccountView.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:conv="clr-namespace:Task12.Converters"
         mc:Ignorable="d"
+        Name="CurrentAccount"
         Title="Текущий счет" Height="330" Width="300">
     <Window.Resources>
         <conv:StringToDecimalConverter x:Key="StringToDecimalConverter"/>
@@ -43,8 +44,8 @@
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <Button Grid.Column="0" Content="Отмена" Command="{Binding CancelCommand}" Style="{StaticResource ButtonStyle}"/>
-                <Button Grid.Column="1" Content="Ok" Command="{Binding OkCommand}" Style="{StaticResource ButtonStyle}"/>
+                <Button Grid.Column="0" Content="Отмена" Command="{Binding CancelCommand}" CommandParameter="{Binding ElementName=CurrentAccount}" Style="{StaticResource ButtonStyle}"/>
+                <Button Grid.Column="1" Content="Ok" Command="{Binding OkCommand}" CommandParameter="{Binding ElementName=CurrentAccount}" Style="{StaticResource ButtonStyle}"/>
             </Grid>
         </StackPanel>
     </Border>
