--- a/Task12/View/TopUpAccountView.xaml
+++ b/Task12/View/TopUpAccountView.xaml
@@ -6,6 +6,7 @@
         xmlns:local="clr-namespace:Task12"
         xmlns:conv="clr-namespace:Task12.Converters"
         mc:Ignorable="d"
+        Name="TopUp"
         Title="Пополнение счета" Height="280" Width="350">
     <Window.Resources>
         <conv:StringToDecimalConverter x:Key="StringToDecimalConverter"/>
@@ -35,8 +36,8 @@
                     <ColumnDefinition Width ="*"/>
                     <ColumnDefinition Width ="*"/>
                 </Grid.ColumnDefinitions>
-                <Button Grid.Column="0" Content="Отмена" Command="{Binding CancelCommand}" Style="{StaticResource ButtonStyle}"/>
-                <Button Grid.Column="1" Content="Ok" Command="{Binding OkCommand}" Style="{StaticResource ButtonStyle}"/>
+                <Button Grid.Column="0" Content="Отмена" Command="{Binding CancelCommand}" CommandParameter="{Binding ElementName=TopUp}"  Style="{StaticResource ButtonStyle}"/>
+                <Button Grid.Column="1" Content="Ok" Command="{Binding OkCommand}" CommandParameter="{Binding ElementName=TopUp}" Style="{StaticResource ButtonStyle}"/>
             </Grid>
         </StackPanel>
     </Border>
