--- a/Task12/View/Accounts/SavingAccountView.xaml
+++ b/Task12/View/Accounts/SavingAccountView.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:conv="clr-namespace:Task12.Converters"
+        xmlns:conv="clr-namespace:WPFUsefullThings;assembly=WPFUsefullThings"
         mc:Ignorable="d"
         Name="SavingAccount"
         Title="Сберегательный счет" Height="380" Width="330">
