--- a/Task12/View/TransferView.xaml
+++ b/Task12/View/TransferView.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Task12.View"
-        xmlns:conv="clr-namespace:Task12.Converters"
+        xmlns:conv="clr-namespace:WPFUsefullThings;assembly=WPFUsefullThings"
         mc:Ignorable="d"
         Name ="Transfer"
         Title="Перевод средств" Height="300" Width="700">
